<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeGo</string>

    <string-array name="left_items_array">
        <item>Favorite</item>
        <item>Change password</item>
        <item>Log out</item>
        <item>Exit</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="title_activity_location_detail">LocationDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_btn_text">Save</string>
    <string name="like_btn_text">Like</string>
    <string name="post_buttom_text">Post!</string>
    <string name="rating_text">Rating</string>
    <string name="description_text">Description</string>
    <string name="map_view_text">Map view</string>
    <string name="post_text">Post</string>
    <string name="exit_dialog_title">Quit application</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="services_text">Services</string>
    <string name="like_text">Likes</string>
    <string name="search_hint">Search location</string>
    <string name="no_search_item_text">Nothing to show! Search location first!</string>
    <string name="search_action">Search</string>
    <string name="like_ext1_string">people like </string>
    <string name="like_ext2_string">and 1 may like this</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="user_name_text">Username</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">HERE WeGo!</string>
    <string name="sign_up_text">Don\'t have accout? Sign up!</string>
    <string name="no_network_text">No network connection. Open setting now?</string>
    <string name="can_not_log_in_text">Can not log in. Check your username or password</string>
    <string name="can_not_regist_text">Can not sign up new account.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="real_name">Your real name</string>
    <string name="email">Email</string>
    <string name="birth_day">Birth day</string>
    <string name="regist_text">Sign up!</string>
    <string name="empty_field">Please fill all fields!</string>
    <string name="password_missmatch">Passwords are mismatch!</string>
    <string name="please_wait">Please wait</string>
    <string name="new_pass_text">New password</string>
    <string name="confirm_new_pass_text">Confirm new password</string>
    <string name="change_pass_text">Change password</string>
    <string name="old_pass_text">Old password</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="unknown_exceeption">Unknown error</string>
    <string name="say_something_text">Leave your comment</string>
    <string name="posted_test">Posted</string>
    <string name="like_text">Like</string>
    <string name="liked_text">Liked</string>
    <string name="save_text">Save</string>
    <string name="saved_text">Saved</string>
    <string name="deleted_text">Delete</string>

    <color name="theme_color">#76C9F5</color>

    <string name="detail_text">Detail</string>
    <string name="navigate_text">Navigate</string>
    <string name="title_activity_favorite_location">FavoriteLocationActivity</string>
    <string name="forcus_map_text">Focus location</string>
    <string name="favoriteList_title">Favorites</string>
    <string name="fail_to_remove_fav">Error when removing favorite location</string>
    <string name="fail_to_navigate">Failed to navigate.</string>
</resources>