<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#76C9F5"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wego_banner" />

    <LinearLayout
        android:id="@+id/change_pass_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/oldPass"
            style="@style/log_in_textbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp0.25_padding"
            android:layout_marginLeft="@dimen/dp20_padding"
            android:layout_marginRight="@dimen/dp20_padding"
            android:background="@drawable/user_name_text_box_selector"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/old_pass_text"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/newPass"
            style="@style/log_in_textbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp0.25_padding"
            android:layout_marginLeft="@dimen/dp20_padding"
            android:layout_marginRight="@dimen/dp20_padding"
            android:layout_marginTop="@dimen/dp0.25_padding"
            android:background="@drawable/password_text_box_selector2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/new_pass_text"
            android:inputType="textPassword"
             />

        <EditText
            android:id="@+id/newPassConfirm"
            style="@style/log_in_textbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20_padding"
            android:layout_marginRight="@dimen/dp20_padding"
            android:layout_marginTop="@dimen/dp0.25_padding"
            android:background="@drawable/pass_word_text_box_selector"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_new_pass_text"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/btnChangePass"
            style="@style/log_in_textbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp0.25_padding"
            android:layout_marginLeft="@dimen/dp20_padding"
            android:layout_marginRight="@dimen/dp20_padding"
            android:layout_marginTop="@dimen/dp20_padding"
            android:background="@drawable/log_in_button_selector"
            android:hint="@string/change_pass_text"
            android:text="@string/change_pass_text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/btnCancelChange"
            style="@style/log_in_textbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20_padding"
            android:layout_marginRight="@dimen/dp20_padding"
            android:layout_marginTop="@dimen/dp0.25_padding"
            android:background="@drawable/regist_button_selector"
            android:text="@string/cancel_text"
            android:textColor="#e2f4fb"
            android:textColorHint="#e2f4fb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chg_wait_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/wait_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>