<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76c9f5"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wego_banner" />

            <LinearLayout
                android:id="@+id/rgtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtRgtUserName"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp0.25_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:background="@drawable/user_name_text_box_selector"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/user_name_text" />

                <EditText
                    android:id="@+id/edtRgtPassword"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp0.25_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:layout_marginTop="@dimen/dp0.25_padding"
                    android:background="@drawable/password_text_box_selector2"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password_text"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edtRgtConfirmPassword"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp5_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:layout_marginTop="@dimen/dp0.25_padding"
                    android:background="@drawable/pass_word_text_box_selector"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/confirm_password_text"
                    android:inputType="textEmailAddress" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/edtRgtRealName"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp0.25_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:layout_marginTop="@dimen/dp5_padding"
                    android:background="@drawable/user_name_text_box_selector"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/real_name" />

                <EditText
                    android:id="@+id/edtRgtEmail"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp0.25_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:background="@drawable/password_text_box_selector2"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email" />

                <EditText
                    android:id="@+id/edtRgtBirthday"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10_pading"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:layout_marginTop="@dimen/dp0.25_padding"
                    android:background="@drawable/pass_word_text_box_selector"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/birth_day"
                    android:inputType="@null" />

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/log_in_textbox_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp0.25_padding"
                    android:layout_marginLeft="@dimen/dp20_padding"
                    android:layout_marginRight="@dimen/dp20_padding"
                    android:layout_marginTop="@dimen/dp20_padding"
                    android:background="@drawable/log_in_button_selector"
                    android:text="@string/regist_text"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rgt_wait_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>